--- a/docs/common/Integrator_Concepts.asciidoc
+++ b/docs/common/Integrator_Concepts.asciidoc
@@ -1,3 +1,6 @@
+
+:imagesdir: common/images
+
 = Integrator Concepts
 
 [[cha:integrator-concepts]] (((Integrator Concepts)))
@@ -80,7 +83,7 @@ unlike stepper motors which are generally run 'open loop'. What does
 system is connected. 
 
 .Servo Loop
-image::images/servo-feedback.png[]
+image::servo-feedback.png[]
 
 This diagram shows that the input signal (and the feedback signal) drive 
 the summing amplifier, the summing amplifier drives the power amplifier, 
@@ -112,7 +115,7 @@ set point. In the case of Machinekit the process we want to control is actual
 axis position and the set point is the commanded axis position.
 
 .PID Loop
-image::images/pid-feedback.png[]
+image::pid-feedback.png[]
 
 By 'tuning' the three constants in the PID controller algorithm, the
 controller can provide control action designed for specific process
@@ -214,4 +217,3 @@ shutdown has been started, and that's why you might need to push the power
 button to completely turn off your computer. The RTAI group has been 
 improving this in recent releases, so your Machinekit system may shut off by 
 itself after all. 
-
