--- a/docs/hal/pyvcp.asciidoc
+++ b/docs/hal/pyvcp.asciidoc
@@ -1,3 +1,6 @@
+
+:imagesdir: hal/images
+
 = Python Virtual Control Panel
 
 [[cha:pyvcp]] (((Python Virtual Control Panel)))
@@ -21,7 +24,7 @@ board.
 
 The following graphic displays many of the PyVCP widgets.
 
-image::images/pyvcp_group.png[]
+image::pyvcp_group.png[]
 
 == Panel Construction
 
@@ -36,7 +39,7 @@ contains widget tags between <pyvcp> and </pyvcp>. For example:
 </pyvcp>
 -------------------------------------------------
 
-image::images/pyvcp_mypanel.png[]
+image::pyvcp_mypanel.png[]
 
 If you place this text in a file called tiny.xml, and run
 
@@ -128,7 +131,7 @@ assuming that a signal called 'spindle-rpm-filtered' already exists.
 Note that when running together with AXIS, all PyVCP widget HAL pins
 have names that start with 'pyvcp.'.
 
-image::images/pyvcp_axis_lathe.png[]
+image::pyvcp_axis_lathe.png[]
 
 This is what the newly created PyVCP panel should look like in AXIS.
 The 'sim/lathe' configuration is already configured this way.
@@ -323,7 +326,7 @@ The label has an optional disable pin that is created when you add
 
 The above code produced this example. 
 
-image::images/pyvcp_label.png[]
+image::pyvcp_label.png[]
 
 === Multi_Label
 
@@ -381,7 +384,7 @@ will be on_color when the halpin is true, and off_color otherwise.
 
 The above code produced this example.
 
-image::images/pyvcp_led.png[]
+image::pyvcp_led.png[]
 
 ==== Rectangle LED
 
@@ -405,7 +408,7 @@ This is a variant of the 'led' widget.
 The above code produced this example. 
 Also showing a vertical box with relief. 
 
-image::images/pyvcp_rectled.png[]
+image::pyvcp_rectled.png[]
 
 === Buttons
 
@@ -447,7 +450,7 @@ add <disable_pin>True</disable_pin>.
 
 The above code produced this example. 
 
-image::images/pyvcp_button.png[]
+image::pyvcp_button.png[]
 
 ==== Checkbutton
 
@@ -474,7 +477,7 @@ The coolant checkbutton is checked.
 Notice the extra spaces in the Chips text 
 to keep the checkbuttons aligned. 
 
-image::images/pyvcp_checkbutton.png[]
+image::pyvcp_checkbutton.png[]
 
 ==== Radiobutton
 
@@ -494,7 +497,7 @@ Only one radio button may be set to TRUE (1) or only the highest number pin set 
 
 The above code produced this example. 
 
-image::images/pyvcp_radiobutton.png[]
+image::pyvcp_radiobutton.png[]
 
 Note that the HAL pins in the example above will me named
 my-radio.one, my-radio.two, and my-radio.three. In the image above,
@@ -525,7 +528,7 @@ The number widget displays the value of a float signal.
 
 The above code produced this example.
  
-image::images/pyvcp_number.png[]
+image::pyvcp_number.png[]
 
 * '<font>' -  is a Tkinter font type and size specification. One font that
 will show up to at least size 200 is 'courier 10 pitch', so for a
@@ -557,7 +560,7 @@ width is wide enough to cover the largest number you expect to use.
 
 The above code produced this example. 
 
-image::images/pyvcp_s32.png[]
+image::pyvcp_s32.png[]
 
 ==== u32 Number
 
@@ -588,7 +591,7 @@ if you only want 2 ranges, set 2 of them to the same colour)
 
 The above code produced this example. 
 
-image::images/pyvcp_bar.png[]
+image::pyvcp_bar.png[]
 
 ==== Meter
 
@@ -614,7 +617,7 @@ indicator.
 
 The above code produced this example. 
 
-image::images/pyvcp_meter.png[]
+image::pyvcp_meter.png[]
 
 === Number Inputs
 
@@ -642,7 +645,7 @@ an initial value and to remotely alter its value without HID input
 
 The above code produced this example. 
 
-image::images/pyvcp_spinbox.png[]
+image::pyvcp_spinbox.png[]
 
 ==== Scale
 
@@ -683,7 +686,7 @@ an initial value and to remotely alter its value without HID input
 
 The above code produced this example. 
 
-image::images/pyvcp_scale.png[]
+image::pyvcp_scale.png[]
 
 ==== Dial
 
@@ -714,7 +717,7 @@ an initial value and to remotely alter its value without HID input
 
 The above code produced this example. 
 
-image::images/pyvcp_dial.png[]
+image::pyvcp_dial.png[]
 
 ==== Jogwheel
 
@@ -733,7 +736,7 @@ motion, or by rolling the mouse-wheel.
 
 The above code produced this example. 
 
-image::images/pyvcp_jogwheel.png[]
+image::pyvcp_jogwheel.png[]
 
 === Images
 
@@ -838,7 +841,7 @@ width of the border.
 
 The above code produced this example. 
 
-image::images/pyvcp_borders.png[]
+image::pyvcp_borders.png[]
 
 ==== Hbox
 
@@ -859,7 +862,7 @@ next to each other.
 
 The above code produced this example. 
 
-image::images/pyvcp_hbox.png[]
+image::pyvcp_hbox.png[]
 
 Inside an Hbox, you can use the '<boxfill fill=""/>', '<boxanchor
 anchor=""/>', and '<boxexpand expand=""/>' tags to choose how items in
@@ -887,7 +890,7 @@ other.
 
 The above code produced this example. 
 
-image::images/pyvcp_vbox.png[]
+image::pyvcp_vbox.png[]
 
 Inside a Hbox, you can use the '<boxfill fill=""/>', '<boxanchor
 anchor=""/>', and '<boxexpand expand=""/>'  tags to choose how items in
@@ -914,7 +917,7 @@ corner.
 
 The above code produced this example. 
 
-image::images/pyvcp_labelframe.png[]
+image::pyvcp_labelframe.png[]
 
 ==== Table
 
@@ -957,7 +960,7 @@ Example:
 
 The above code produced this example. 
 
-image::images/pyvcp_table.png[]
+image::pyvcp_table.png[]
 
 ==== Tabs
 
@@ -994,10 +997,8 @@ A tabbed interface can save quite a bit of space.
 
 The above code produced this example showing each tab selected. 
 
-image::images/pyvcp_tabs1.png[]
+image::pyvcp_tabs1.png[]
 
-image::images/pyvcp_tabs2.png[]
+image::pyvcp_tabs2.png[]
 
-image::images/pyvcp_tabs3.png[]
-
-
+image::pyvcp_tabs3.png[]
