--- a/docs/ladder/ladder_examples.asciidoc
+++ b/docs/ladder/ladder_examples.asciidoc
@@ -1,3 +1,6 @@
+
+:imagesdir: ladder/images
+
 = Classicladder Examples
 
 [[cha:classicladder-examples]] (((Classicladder Examples)))
@@ -16,7 +19,7 @@ counting backwards.
 
 .Wrapping Counter[[fig:Wrapping-Counter]]
 
-image::images/wrapping-counter.png[align="center"]
+image::wrapping-counter.png[align="center"]
 
 == Reject Extra Pulses
 
@@ -31,7 +34,7 @@ output until it times out.
 
 .Reject Extra Pulse[[fig:Reject-Extra-Pulse]]
 
-image::images/extra-pulse-reject.png[align="center"]
+image::extra-pulse-reject.png[align="center"]
 
 == External E-Stop
 
@@ -63,7 +66,7 @@ Next we run our config and build the ladder as shown here.
 
 .E-Stop Section Display[[cap:E-Stop-Section-Display]]
 
-image::images/EStop_Section_Display.png[align="center"]
+image::EStop_Section_Display.png[align="center"]
 
 After building the ladder select Save As and save the ladder as
 estop.clp
@@ -140,7 +143,7 @@ Now start up your config and it should look like this.
 
 .AXIS E-Stop[[cap:AXIS-E-Stop]]
 
-image::images/axis_cl-estop.png[align="center"]
+image::axis_cl-estop.png[align="center"]
 
 Note that in this example like in real life you must clear the remote
 E-Stop (simulated by the checkbox) before the AXIS E-Stop or the
@@ -155,7 +158,7 @@ the timer preset based on if an input is on or off.
 
 .Timer/Operate Example[[cap:Timer/Operate-Example]]
 
-image::images/Tmr_Section_Display.png[align="center"]
+image::Tmr_Section_Display.png[align="center"]
 
 In this case %I0 is true so the timer preset value is 10. If %I0 was
 false the timer preset would be 5.
@@ -204,4 +207,3 @@ Step 3 is active and waiting for %B2 to be true.
 Step 4 is active and is waiting for %B3 to be true.
 WOW, that was quite a mouthful!!
 ///////////////////////////////////////////////////////////////////////////////
-
