--- a/docs/code/Code_Notes.asciidoc
+++ b/docs/code/Code_Notes.asciidoc
@@ -1,3 +1,6 @@
+
+:imagesdir: code
+
 = Code Notes
 
 == Intended audience
@@ -1437,4 +1440,3 @@ settings.tool_change_with_spindle_on::
 
     These are set from ini variables in the +[EMCIO]+ section, and
     control how tool changes are performed.
-
