--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -5,10 +5,9 @@ please make sure you have read:
 
 - link:getting-help.asciidoc[Getting help]
 
-- link:index-getting-started.asciidoc[Getting started manual]
 - link:index-user.asciidoc[User manual]
+- link:index-getting-started.asciidoc[Getting started manual]
 - link:index-HAL.asciidoc[HAL manual]
 - link:index-integrator.asciidoc[Integrator manual]
 - link:index-developer.asciidoc[Developer manual]
-
-- link:machinekit-documentation/documenting/documenting.asciidoc[Documenting manual]
+- link:documenting/documenting.asciidoc[Documenting manual]
