--- a/docs/documenting/documenting.asciidoc
+++ b/docs/documenting/documenting.asciidoc
@@ -1,6 +1,7 @@
 
-Documenting
-===========
+:imagesdir: images
+
+= Documenting
 
 The quick-start guide for the impatiant.
 
@@ -8,7 +9,7 @@ Remember: no change is too small!
 
 Helping out can be done in various ways. You should choose the one that best fits you.
 No matter what you do, to get your changes into the master branch you need to
-work via these link:http://www.machinekit.io/docs/contributing/[instructions.]
+work via these link:/community/contributing/[instructions.]
 
 The original documents that originated in LinuxCNC were split in a separate repo
 so that we have a way of getting the documentation more accessible via the web
@@ -21,7 +22,7 @@ you can start to do what you want to do. And share your changes.
 
 == Getting it
 
-- The easiest way to start after reading the link:http://www.machinekit.io/docs/contributing/[instructions]
+- The easiest way to start after reading the link:/community/contributing/[instructions]
 above is to link:https://github.com/join[get a Github user account].
 - log into your new account and fork the `machinekit-docs` repo.
 
@@ -33,13 +34,13 @@ link:updating-your-fork.asciidoc[updating your fork] instructions.
 
 - click on the file you want to change and edit the contents.
 
-image::images/editing-a-file.png[]
+image::editing-a-file.png[]
 - when you're done scroll down.
   * give a good commit message, like `<the file you changed>: <what you did>`
   * optionally more info.
   * push the `commit` button
 
-image::images/committing-changes.png[]
+image::committing-changes.png[]
 
 - this will make the commit in your forked repo.
 
@@ -51,14 +52,14 @@ by creating a ``Pull Request'' or `PR` for short.
 
 - notice the green button to compare for a pull request below?
 
-image::images/compare-for-PR.png[]
+image::compare-for-PR.png[]
 
 - Pushing this button will get you to the next screen where you can create your comments
 for the `PR`. Also remember to describe this in the way you did when you created
 your commit. this will help a maintainer understand what you did, and why. So then
 the review will be much easier to understand.
 
-image::images/create-PR-to-original.png[]
+image::create-PR-to-original.png[]
 
 - when you finished this the maintainers of the project will get a message and can
 review your change.
