--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -3,11 +3,11 @@
 Before asking questions on the google group Machinekit list,
 please make sure you have read:
 
-- link:getting-help.asciidoc[Getting help]
+- link:docs/getting-help.asciidoc[Getting help]
 
-- link:index-user.asciidoc[User manual]
-- link:index-getting-started.asciidoc[Getting started manual]
-- link:index-HAL.asciidoc[HAL manual]
-- link:index-integrator.asciidoc[Integrator manual]
-- link:index-developer.asciidoc[Developer manual]
-- link:documenting/documenting.asciidoc[Documenting manual]
+- link:docs/index-user.asciidoc[User manual]
+- link:docs/index-getting-started.asciidoc[Getting started manual]
+- link:docs/index-HAL.asciidoc[HAL manual]
+- link:docs/index-integrator.asciidoc[Integrator manual]
+- link:docs/index-developer.asciidoc[Developer manual]
+- link:docs/documenting/documenting.asciidoc[Documenting manual]
